fix: improve share icons alignment

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -349,3 +349,7 @@ p.legend {
         z-index: 1;
     }
 }
+
+.share-page {
+    line-height: 10px;
+}
